Update Tokyo Olympic Transformation.ipynb

--- a/Tokyo Olympic Transformation.ipynb
+++ b/Tokyo Olympic Transformation.ipynb
@@ -49,9 +49,9 @@
    "source": [
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"31389b9b-c80f-458b-8def-69d6462ee52c\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": 'JD58Q~QCcj5CyqoJd64IFiV1D3CC1WT3kTOEcaox',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/1473b4e9-d76a-4182-b0d5-0eae8baab553/oauth2/token\"}\n",
+    "\"fs.azure.account.oauth2.client.id\": \"\",\n",
+    "\"fs.azure.account.oauth2.client.secret\": '',\n",
+    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com//oauth2/token\"}\n",
     "\n",
     "dbutils.fs.mount(\n",
     "source = \"abfss://tokyo-olympic-data@tokyoolympicdataakash.dfs.core.windows.net\", # contrainer@storageacc\n",
